I have corrected a typo and updated the file location for the information pages

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -26,7 +26,7 @@
                  <img src = "Media/Logo.png" alt="Logo" type= "png" class="logo"/>  
     </head>
 
-         <!-- lets me styke background using css -->
+         <!-- lets me style the background using css -->
     <body class="bckgrnd">
 
         <!-- line break -->
@@ -57,7 +57,7 @@
                                         <!-- Flip card header-->
                                         <h1> Hip-Hop</h1>
                                         <!-- Flip card text-->
-                                        <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend.<strong><a href="Hip-Hop.html"target="_blank"class="links">Read More.</a></strong></p>
+                                        <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new style of fashion that was created alongside it. By the 90s Hip-Hop had popularised streetwear moving it from a subsector of fashion to a mainstream trend.<strong><a href="Information pages/Hip-Hop.html"target="_blank"class="links">Read More.</a></strong></p>
                                     </div>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
                                             <!-- Flip card header-->
                                             <h1> Skating</h1>
                                             <!-- Flip card text-->
-                                            <p> Whilst Hip-Hop is said to have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s, with brands Like Stussy catering specifically to skate culture. They both have played a crucial role in developing the 90s aesthetic.<strong><a href="Skating.html" target="_blank"class="links">Read More.</a></strong></p>
+                                            <p> Whilst Hip-Hop is said to have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s, with brands Like Stussy catering specifically to skate culture. They both have played a crucial role in developing the 90s aesthetic.<strong><a href="Information pages/Skating.html" target="_blank"class="links">Read More.</a></strong></p>
                                         </div>
                                 </div>
                             </div> 
@@ -89,7 +89,7 @@
                                              <!-- Flip card header-->
                                             <h1> Japanese Streetwear</h1>
                                              <!-- Flip card text-->
-                                            <p> Japanese streetwear is also known as the Harajuku aesthetic, is very prevalent in global streetwear culture. In the 70s and 80s, Japanese youth began to rebel against the elder's traditions and embrace the western culture. Japanese streetwear is a representation of this defiance and non-conformitism. These themes are still present in streetwear today.<strong><a href="Japanese Streetwear.html" target="_blank" class="links">Read More</a></strong></p>
+                                            <p> Japanese streetwear is also known as the Harajuku aesthetic, is very prevalent in global streetwear culture. In the 70s and 80s, Japanese youth began to rebel against the elder's traditions and embrace the western culture. Japanese streetwear is a representation of this defiance and non-conformitism. These themes are still present in streetwear today.<strong><a href="Information pages/Japanese Streetwear.html" target="_blank" class="links">Read More</a></strong></p>
                                         </div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                                             <!-- Flip card header-->
                                             <h1> Basketball</h1>
                                             <!-- Flip card text-->
-                                            <p> During the early 80s, there was a growing demand for athletic wear to be worn for the aesthetic. Streetball was also growing in popularity. The Nike Air Jordan 1 brought a lot of controversy to professional basketball, but the shoe was a huge success as a fashion statement and helped Nike to achieve the streetwear status it has today.<strong><a href="Basketball.html" target="_blank"class="links">Read More.</a></strong></p>
+                                            <p> During the early 80s, there was a growing demand for athletic wear to be worn for the aesthetic. Streetball was also growing in popularity. The Nike Air Jordan 1 brought a lot of controversy to professional basketball, but the shoe was a huge success as a fashion statement and helped Nike to achieve the streetwear status it has today.<strong><a href="Information pages/Basketball.html" target="_blank"class="links">Read More.</a></strong></p>
                                         </div>
                                 </div>
                             </div>
@@ -124,7 +124,7 @@
                                             <!-- Flip card header-->
                                             <h1> Street art</h1>
                                             <!-- Flip card text-->
-                                            <p> The early 80s saw other subsections of street culture such as street art also influencing fashion at that time. Artists such as Keith Harring; are recognised for being one of the first street artists to bring their art styles to museums and galleries. Artists like Keith Harring are regarded as street art pioneers.<strong><a href="Street-art.html"target="_blank" class="links">Read More.</a></strong></p>
+                                            <p> The early 80s saw other subsections of street culture such as street art also influencing fashion at that time. Artists such as Keith Harring; are recognised for being one of the first street artists to bring their art styles to museums and galleries. Artists like Keith Harring are regarded as street art pioneers.<strong><a href="Information pages/Street-art.html"target="_blank" class="links">Read More.</a></strong></p>
                                         </div>
                                 </div>
                             </div>
