I have updated the stylesheet  location for all of the other html files

--- a/come to the hub.html
+++ b/come to the hub.html
@@ -7,7 +7,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
      <!-- links my css and html pages--> 
-     <link rel="stylesheet" href="come to the hub.css" type="text/css" />
+     <link rel="stylesheet" href="Style/come to the hub.css" type="text/css" />
 
      <!-- this allows me to import icons from font awseome and fonts from google fonts -->
      <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
