--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <meta name="keywords" content="creative, fashion, street culture, photography, street art, creatives club, creatives hub">
 
       <!-- links my css and html pages--> 
-      <link rel="stylesheet" href="style.css" type="text/css" />
+      <link rel="stylesheet" href="Style/style.css" type="text/css" />
 
       <!-- this allows me to import icons from font awseome and fonts from google fonts --> 
       <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
