--- a/Exclusives.html
+++ b/Exclusives.html
@@ -75,10 +75,10 @@
       <footer>
         <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons. floating them to the left and keeping them inline with the footer text--> 
         <section class="footer"> 
-          <a href="https://www.instagram.com/"class="fa fa-instagram x3 fa-pull-right"  style="text-decoration: none;" style= "color:rgb(223, 189, 105)"></a>
-          <a href="https://www.snapchat.com/l/en-gb/download/"class="fa fa-snapchat x3 fa-pull-right" style="text-decoration: none;" style= "color:rgb(223, 189, 105)"></a>
-          <a href="https://www.facebook.com/"class="fa fa-facebook x3 fa-pull-right" style= "text-decoration: none;" style= "color:rgb(223, 189, 105)"></a>
-          <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3 fa-pull-right" style="text-decoration: none;" style= "color:rgb(223, 189, 105)"></a>
+          <a href="https://www.instagram.com/"class="fa fa-instagram x3 fa-pull-right"  style= "color:rgb(223, 189, 105); text-decoration: none;"></a>
+          <a href="https://www.snapchat.com/l/en-gb/download/"class="fa fa-snapchat x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
+          <a href="https://www.facebook.com/"class="fa fa-facebook x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
+          <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3 fa-pull-right" style="color:rgb(223, 189, 105); text-decoration: none;" ></a>
            <p>Copyright Brieanna McDonald 2021</p>
         </section>
     </footer>
