--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -146,23 +146,23 @@
                             </div>
                         </section> 
                             <section class="pictures">
-                                <a href="Hip-Hop.html"target="_blank"class="links"><img src="Media/hip-hop.jpg" alt="Break dancer" width="320px" height="400px"></a>
-                                <a href="Skating.html" target="_blank"class="links"><img src="Media/skating.jpg" alt="Skater Skating" width="320px" height="400px"></a>
-                                <a href="Japanese Streetwear.html" target="_blank" class="links"><img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width="320px" height="400px"></a>
-                                <a href="Basketball.html" target="_blank"class="links"><img src="Media/basketball.jpg" alt="basketball" width="320px" height="400px"></a>
-                                <a href="Street-art.html"target="_blank" class="links"><img src="Media/Street-art.png" alt="Street-art" width="320px" height="400px"></a>
-                                <a href="Exclusives.html" target="_blank"class="links"><img src="Media/LV-Trainers.jpg" alt="Louis Vuitton Trainers" width="320px" height="400px"></a>
+                                <a href="Media/Hip-Hop.html"target="_blank"class="links"><img src="Media/hip-hop.jpg" alt="Break dancer" width="320px" height="400px"></a>
+                                <a href="Media/Skating.html" target="_blank"class="links"><img src="Media/skating.jpg" alt="Skater Skating" width="320px" height="400px"></a>
+                                <a href="Media/Japanese Streetwear.html" target="_blank" class="links"><img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width="320px" height="400px"></a>
+                                <a href="Media/Basketball.html" target="_blank"class="links"><img src="Media/basketball.jpg" alt="basketball" width="320px" height="400px"></a>
+                                <a href="Media/Street-art.html"target="_blank" class="links"><img src="Media/Street-art.png" alt="Street-art" width="320px" height="400px"></a>
+                                <a href="Media/Exclusives.html" target="_blank"class="links"><img src="Media/LV-Trainers.jpg" alt="Louis Vuitton Trainers" width="320px" height="400px"></a>
                             </section>
                            
     </body>
     <footer>
         <!-- allows me to style the footer using css, sets the text that will be visble in the footer and creates a list for the social media icons. floating them to the left and keeping them inline with the footer text--> 
         <section class="footer"> 
-            <a href="https://www.instagram.com/"class="fa fa-instagram x3 fa-pull-right"  style="text-decoration: none;" style= "color:rgb(223, 189, 105)"></a>
-            <a href="https://www.snapchat.com/l/en-gb/download/"class="fa fa-snapchat x3 fa-pull-right" style="text-decoration: none;" style= "color:rgb(223, 189, 105)"></a>
-            <a href="https://www.facebook.com/"class="fa fa-facebook x3 fa-pull-right" style= "text-decoration: none;" style= "color:rgb(223, 189, 105)"></a>
-            <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3 fa-pull-right" style="text-decoration: none;" style= "color:rgb(223, 189, 105)"></a>
-             <p>Copyright Brieanna McDonald 2021</p>
+            <a href="https://www.instagram.com/"class="fa fa-instagram x3 fa-pull-right"  style= "color:rgb(223, 189, 105); text-decoration: none;"></a>
+            <a href="https://www.snapchat.com/l/en-gb/download/"class="fa fa-snapchat x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
+            <a href="https://www.facebook.com/"class="fa fa-facebook x3 fa-pull-right" style= "color:rgb(223, 189, 105) ; text-decoration: none;"></a>
+            <a href="https://twitter.com/login?lang=en-gb"class="fa fa-twitter x3 fa-pull-right" style="color:rgb(223, 189, 105); text-decoration: none;" ></a>
+               <p>Copyright Brieanna McDonald 2021</p>
         </section>
     </footer>
 </html>     
