Corrected the typo causing broken links on the information pages

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -146,12 +146,12 @@
                             </div>
                         </section> 
                             <section class="pictures">
-                                <a href="Media/Hip-Hop.html"target="_blank"class="links"><img src="Media/hip-hop.jpg" alt="Break dancer" width="320px" height="400px"></a>
-                                <a href="Media/Skating.html" target="_blank"class="links"><img src="Media/skating.jpg" alt="Skater Skating" width="320px" height="400px"></a>
-                                <a href="Media/Japanese Streetwear.html" target="_blank" class="links"><img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width="320px" height="400px"></a>
-                                <a href="Media/Basketball.html" target="_blank"class="links"><img src="Media/basketball.jpg" alt="basketball" width="320px" height="400px"></a>
-                                <a href="Media/Street-art.html"target="_blank" class="links"><img src="Media/Street-art.png" alt="Street-art" width="320px" height="400px"></a>
-                                <a href="Media/Exclusives.html" target="_blank"class="links"><img src="Media/LV-Trainers.jpg" alt="Louis Vuitton Trainers" width="320px" height="400px"></a>
+                                <a href="Information pages/Hip-Hop.html"target="_blank"class="links"><img src="Media/hip-hop.jpg" alt="Break dancer" width="320px" height="400px"></a>
+                                <a href="Information pages/Skating.html" target="_blank"class="links"><img src="Media/skating.jpg" alt="Skater Skating" width="320px" height="400px"></a>
+                                <a href="Information pages/Japanese Streetwear.html" target="_blank" class="links"><img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width="320px" height="400px"></a>
+                                <a href="Information pages/Basketball.html" target="_blank"class="links"><img src="Media/basketball.jpg" alt="basketball" width="320px" height="400px"></a>
+                                <a href="Information pages/Street-art.html"target="_blank" class="links"><img src="Media/Street-art.png" alt="Street-art" width="320px" height="400px"></a>
+                                <a href="Exclusives.html" target="_blank"class="links"><img src="Media/LV-Trainers.jpg" alt="Louis Vuitton Trainers" width="320px" height="400px"></a>
                             </section>
                            
     </body>
