implementing user feedback, it was requested the form data shows in a new tab

--- a/Exclusives.html
+++ b/Exclusives.html
@@ -30,7 +30,7 @@
               <br>
               <section class="form"> 
                   <!-- sign up form, shows the form details to the user after they successfully sign up-->
-                  <form action="https://formdump.codeinstitute.net/" method="POST">
+                  <form action="https://formdump.codeinstitute.net/" method="POST" target="_blank">
                     
                   <!-- Sets the label and text for the name part of the form-->
                     <label for=" name">Name:</label><br>
