User said the information on smaller screens was not as clear. I have created a new information page to make this more clear

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -140,7 +140,7 @@
                                              <!-- Flip card header-->
                                             <h1> Haute Coture</h1>
                                             <!-- Flip card text-->
-                                            <p> The 80s were crucial to Streetwear, Haute Coture crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of LV.   High end designers collaborating with streetwear brands has become common. Street culture will continue to evolve.  If you would like to contribute to its evolution.<strong><a href="Exclusives.html" target="_blank"class="links">Join us !</a></strong></p>
+                                            <p> The 80s were crucial to Streetwear, Haute Coture crossover which created streewear as we know it today. Street culture will continue to evolve.  If you would like to contribute to its evolution.<strong><a href="Exclusives.html" target="_blank"class="links">Join us !</a></strong>to read more <a href="Information pages/Haute.Coture.html" target="_blank"class="links">click here </a></p> 
                                         </div>
                                 </div>
                             </div>
@@ -151,7 +151,7 @@
                                 <a href="Information pages/Japanese Streetwear.html" target="_blank" class="links"><img src="Media/cdg.jpg" alt="Commes Des Garcons Trainers" width="320px" height="400px"></a>
                                 <a href="Information pages/Basketball.html" target="_blank"class="links"><img src="Media/basketball.jpg" alt="basketball" width="320px" height="400px"></a>
                                 <a href="Information pages/Street-art.html"target="_blank" class="links"><img src="Media/Street-art.png" alt="Street-art" width="320px" height="400px"></a>
-                                <a href="Exclusives.html" target="_blank"class="links"><img src="Media/LV-Trainers.jpg" alt="Louis Vuitton Trainers" width="320px" height="400px"></a>
+                                <a href="Information pages/Haute.Coture.html" target="_blank"class="links"><img src="Media/LV-Trainers.jpg" alt="Louis Vuitton Trainers" width="320px" height="400px"></a>
                             </section>
                            
     </body>
