I have fixed the broken links and changed the link colour on all the pages

--- a/Information pages/Basketball.html
+++ b/Information pages/Basketball.html
@@ -7,19 +7,19 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
          <!-- links my css and html pages--> 
-         <link rel="stylesheet" href="Style/Streetwear's evolution.css" type="text/css" />
+         <link rel="stylesheet" href="/Style/Streetwear's evolution.css evolution.css" type="text/css" />
  
          <!-- this allows me to import icons from font awseome and fonts from google fonts -->
          <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
      </head>
  
-     <body style="background-color:rgb(223, 189, 105); font-family: 'Courier New', Courier, monospace;">
-        <h1><strong>Basketball</strong></h1>
+     <body style="background-color:rgb(223, 189, 105);">
+        <h1 class="Font"><strong>Basketball</strong></h1>
 
-        <p>During the early 80s, there was a growing demand for athletic wear to be worn for the aesthetic. Streetball was also growing in popularity. The Nike Air Jordan 1 brought a lot of controversy to professional basketball, but the shoe was a huge success as a fashion statement and helped Nike to achieve the streetwear status it has today. Till this day the Jordan and Nike are major players in the sneakers game. Sports attire such as jerseys and sneakers have had a great influence on fashion. Some of which is still evident today. With some of the most successful sneaker ‘drops’ being tied to iconic sporting events or players. <br><br>Nike is a popular streetwear/athleisure brand and it currently has contracts with 284 NBA players, dominating any other brand in the NBA. Basketball themed or related streetwear have consistently been a streetwear trend, with NBA teams and players collaborating on or featuring in various street culture fashion releases. NBA features are not only limited to brands such as Nike. Louis Vuitton, Bershka & Dragon Ball Z have also had successful collaborations with the NBA, showing the influence of basketball culture in street culture aesthetics outside of sports.</p>
-        <img src="Media/NBA x LV collection.png" type="png" alt="NBA x LV collection" width="150px">
+        <p class="WorkSans"> During the early 80s, there was a growing demand for athletic wear to be worn for the aesthetic. Streetball was also growing in popularity. The Nike Air Jordan 1 brought a lot of controversy to professional basketball, but the shoe was a huge success as a fashion statement and helped Nike to achieve the streetwear status it has today. Till this day the Jordan and Nike are major players in the sneakers game. Sports attire such as jerseys and sneakers have had a great influence on fashion. Some of which is still evident today. With some of the most successful sneaker ‘drops’ being tied to iconic sporting events or players. <br><br>Nike is a popular streetwear/athleisure brand and it currently has contracts with 284 NBA players, dominating any other brand in the NBA. Basketball themed or related streetwear have consistently been a streetwear trend, with NBA teams and players collaborating on or featuring in various street culture fashion releases. NBA features are not only limited to brands such as Nike. Louis Vuitton, Bershka & Dragon Ball Z have also had successful collaborations with the NBA, showing the influence of basketball culture in street culture aesthetics outside of sports.</p>
+        <img src="/Media/NBA x LV collection.png" type="png" alt="NBA x LV collection" width="150px">
         
-        To view the rest of the NBA x LV collection <a href= "https://uk.louisvuitton.com/eng-gb/magazine/articles/mens-lvxnba-2020#" target="_blank">click here</a>
+        <p class="WorkSans">To view the rest of the NBA x LV collection <a href= "https://uk.louisvuitton.com/eng-gb/magazine/articles/mens-lvxnba-2020#" target="_blank" class="links">click here</a></p>
      </body> 
      <footer></footer>   
 </html>
