--- a/Information pages/Japanese Streetwear.html
+++ b/Information pages/Japanese Streetwear.html
@@ -6,19 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- links my css and html pages--> 
-        <link rel="stylesheet" href="Style/Streetwear's evolution.css" type="text/css" />
+        <link rel="stylesheet" href="/Style/Streetwear's evolution.css" type="text/css" />
 
         <!-- this allows me to import icons from font awseome and fonts from google fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
      </head>
 
-     <body style="background-color:rgb(223, 189, 105); ">
+     <body style="background-color:rgb(223, 189, 105);">
         <h1 class="Font"><strong>Japanese Streetwear</strong></h1>
 
-        <p class="WorkSans">Japanese streetwear is also known as the Harajuku aesthetic is very prevalent in global streetwear culture. In the 70s and 80s, Japanese youth began to rebel against the elder's traditions and embrace the western culture. Japanese streetwear is a representation of this defiance and non-conformitism. These themes are still present in streetwear today, making it a key form of expression amongst creatives, globally. Many of the youth moved to the Harajuku district of Japan in order to escape the traditionalist society, this birthed creativity and design in Japan as we know it today. Brands such as <a href="https://undercoverism.com/"target="_blank">UNDERCOVER</a>, <a href="https://www.neighborhood.jp/en"target="_blank">NEIGHBORHOOD</a> & <a href="https://www.wtaps.com/"target="_blank">WTAPS</a> paved the way for brands such as <a href="https://int.bape.com/"target="_blank">Bape</a>, <a href="https://www.comme-des-garcons.com/"target="_blank">Commes Des Garcons (CDG)</a> & <a href="https://www.ambushdesign.com/en-gb/"target="_blank">AMBUSH</a>.
-        <br><br> As strange as it may seem toys have played a big part in the streetwear and fashion crossover, a popular brand in this space is Medicom toy company; they have had collaborations with major streetwear brands, luxry fashion brands and various celebrities; producing icon streetwear collectibles. These toys are known as Be@rbrick and have featured on clothing as well, with exclsuive toys reselling anywhere form £5,000 - £35,000, with the <a href=""target="_blank">most expensive be@rbrick</a> reselling for approximately £126,000</p>
-        <img src="Media/Qiu-Tu.png" type="png" alt="Qiu-Tu" width="250px"><br><br>Yue Minjun 'Qiu Tu' 1000% Bearbrick (2008), the most expnesive Be@rbrick<br><br>
-        If you want to start your own Be@rbrick collection, <a href="https://blog.ha.com/heritage-guide-to-collecting-bebricks/" target="_blank">click here.</a> <br><br><a href= "https://www.selfridges.com/GB/en/cat/be-rbrick/" target="_blank">Click here</a> to check out the Bearbrick collection at selfridges</a> 
+        <p class="WorkSans">Japanese streetwear is also known as the Harajuku aesthetic is very prevalent in global streetwear culture. In the 70s and 80s, Japanese youth began to rebel against the elder's traditions and embrace the western culture. Japanese streetwear is a representation of this defiance and non-conformitism. These themes are still present in streetwear today, making it a key form of expression amongst creatives, globally. Many of the youth moved to the Harajuku district of Japan in order to escape the traditionalist society, this birthed creativity and design in Japan as we know it today. Brands such as <a href="https://undercoverism.com/"target="_blank" class="links">UNDERCOVER</a>, <a href="https://www.neighborhood.jp/en"target="_blank" class="links">NEIGHBORHOOD</a> & <a href="https://www.wtaps.com/"target="_blank" class="links">WTAPS</a> paved the way for brands such as <a href="https://int.bape.com/"target="_blank"class="links">Bape</a>, <a href="https://www.comme-des-garcons.com/"target="_blank"class="links">Commes Des Garcons (CDG)</a> & <a href="https://www.ambushdesign.com/en-gb/"target="_blank"class="links">AMBUSH</a>.
+        <br><br> As strange as it may seem toys have played a big part in the streetwear and fashion crossover, a popular brand in this space is Medicom toy company; they have had collaborations with major streetwear brands, luxry fashion brands and various celebrities; producing icon streetwear collectibles. These toys are known as Be@rbrick and have featured on clothing as well, with exclsuive toys reselling anywhere form £5,000 - £35,000, with the <a href=""target="_blank" class="links">most expensive be@rbrick</a> reselling for approximately £126,000</p>
+        <img src="/Media/Qiu-Tu.png" type="png" alt="Qiu-Tu" width="250px"><br><br>Yue Minjun 'Qiu Tu' 1000% Bearbrick (2008), the most expnesive Be@rbrick<br><br>
+        If you want to start your own Be@rbrick collection, <a href="https://blog.ha.com/heritage-guide-to-collecting-bebricks/" target="_blank" class="links">click here.</a> <br><br><a href= "https://www.selfridges.com/GB/en/cat/be-rbrick/" target="_blank" class="links">Click here</a> to check out the Bearbrick collection at selfridges</a> 
      </body>
      <footer></footer>
 </html>
