--- a/Information pages/Haute.Coture.html
+++ b/Information pages/Haute.Coture.html
@@ -6,19 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- links my css and html pages--> 
-        <link rel="stylesheet" href="Style/Streetwear's evolution.css" type="text/css" />
+        <link rel="stylesheet" href="/Style/Streetwear's evolution.css" type="text/css" />
 
         <!-- this allows me to import icons from font awseome and fonts from google fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
      </head>
-     <body style="background-color:rgb(223, 189, 105); font-family: 'Courier New', Courier, monospace;">
+     <body style="background-color:rgb(223, 189, 105); ">
         <h1 class="Font"><strong>Haute Coture</strong></h1>
 
-        <p> The 80s were crucial to Streetwear, <a href="https://en.wikipedia.org/wiki/Haute_couture"> Haute Coture</a> crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of Louis Vuitton. High end designers collaborating with streetwear brands has become common with High end designers collaborating with streetwear brands has become increasing common. Especislly since Virgol abloh’s off-white collobarations with LV,  & Japanese streetwear brands like CDG helping to bring streetwear to the heart of ‘high end’ fashion. Street culture will continue to evolve.  If you would like to contribute to its evolution.<strong><a href="Come to the Hub.html" target="_blank"class="links">Join us !</a></strong></p>
+        <p class="WorkSans"> The 80s were crucial to Streetwear, <a href="https://en.wikipedia.org/wiki/Haute_couture" class="links"> Haute Coture</a> crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of Louis Vuitton. High end designers collaborating with streetwear brands has become common with High end designers collaborating with streetwear brands has become increasing common. Especislly since Virgol abloh’s off-white collobarations with LV,  & Japanese streetwear brands like CDG helping to bring streetwear to the heart of ‘high end’ fashion. Street culture will continue to evolve.  If you would like to contribute to its evolution.<strong><a href="Come to the Hub.html" target="_blank"class="links">Join us !</a></strong></p>
 
-        <img src="Media/dior.jpg" width="200px">
+        <img src="/Media/dior.jpg" type="jpg" alt="Dior store" width="200px">
 
-        <p>If you would like to read more about the Haute Coture and streetwear cross over <a href="https://www.vogue.co.uk/article/when-couture-moved-in-on-streetwear">click here</a> to sign up to our mailing lists were we will be giving exlcusives updates and information about upcoming collaborations, drops and events </p>
+        <p class="WorkSans">If you would like to read more about the Haute Coture and streetwear cross over <a href="https://www.vogue.co.uk/article/when-couture-moved-in-on-streetwear" class="links">click here</a> to sign up to our mailing lists were we will be giving exlcusives updates and information about upcoming collaborations, drops and events </p>
      </body>
      <footer></footer>
 </html>
