I have improved the structure of the informtation pages

--- a/Information pages/Basketball.html
+++ b/Information pages/Basketball.html
@@ -14,7 +14,7 @@
      </head>
  
      <body style="background-color:rgb(177, 156, 217);" class="text">
-        <h1 class="Font"><strong>Basketball</strong></h1>
+        <h1 class="Font"><strong>Basketball</strong></h1><br><br>
 
         <p class="WorkSans"> During the early 80s, there was a growing demand for athletic wear to be worn for the aesthetic. Streetball was also growing in popularity. The Nike Air Jordan 1 brought a lot of controversy to professional basketball, but the shoe was a huge success as a fashion statement and helped Nike to achieve the streetwear status it has today. Till this day the Jordan and Nike are major players in the sneakers game. Sports attire such as jerseys and sneakers have had a great influence on fashion. Some of which is still evident today. With some of the most successful sneaker ‘drops’ being tied to iconic sporting events or players. <br><br>Nike is a popular streetwear/athleisure brand and it currently has contracts with 284 NBA players, dominating any other brand in the NBA. Basketball themed or related streetwear have consistently been a streetwear trend, with NBA teams and players collaborating on or featuring in various street culture fashion releases. NBA features are not only limited to brands such as Nike. Louis Vuitton, Bershka & Dragon Ball Z have also had successful collaborations with the NBA, showing the influence of basketball culture in street culture aesthetics outside of sports.</p>
         
