--- a/Information pages/Haute.Coture.html
+++ b/Information pages/Haute.Coture.html
@@ -12,13 +12,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
      </head>
      <body style="background-color:rgb(177, 156, 217); " class="text">
-        <h1 class="Font"><strong>Haute Coture</strong></h1>
+        <h1 class="Font"><strong>Haute Coture</strong></h1><br><br>
 
-        <p class="WorkSans"> The 80s were crucial to Streetwear, <a href="https://en.wikipedia.org/wiki/Haute_couture" class="links"> Haute Coture</a> crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of Louis Vuitton. High end designers collaborating with streetwear brands has become common with High end designers collaborating with streetwear brands has become increasing common. Especislly since Virgol abloh’s off-white collobarations with LV,  & Japanese streetwear brands like CDG helping to bring streetwear to the heart of ‘high end’ fashion. Street culture will continue to evolve.  If you would like to contribute to its evolution.<strong><a href="Come to the Hub.html" target="_blank"class="links">Join us !</a></strong></p>
+          <p class="WorkSans"> The 80s were crucial to Streetwear, <a href="https://en.wikipedia.org/wiki/Haute_couture" class="links"> Haute Coture</a> crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of Louis Vuitton. High end designers collaborating with streetwear brands has become common with High end designers collaborating with streetwear brands has become increasing common. Especislly since Virgol abloh’s off-white collobarations with LV,  & Japanese streetwear brands like CDG helping to bring streetwear to the heart of ‘high end’ fashion. Street culture will continue to evolve.  If you would like to contribute to its evolution.<strong><a href="Come to the Hub.html" target="_blank"class="links">Join us !</a></strong></p>
 
-        <img src="../Media/dior.jpg" type="jpg" alt="Dior store" width="200px">
+             <img src="../Media/dior.jpg" type="jpg" alt="Dior store" width="200px">
 
-        <p class="WorkSans">If you would like to read more about the Haute Coture and streetwear cross over <a href="https://www.vogue.co.uk/article/when-couture-moved-in-on-streetwear" class="links">click here</a> to sign up to our mailing lists were we will be giving exlcusives updates and information about upcoming collaborations, drops and events </p>
+          <p class="WorkSans">If you would like to read more about the Haute Coture and streetwear cross over <a href="https://www.vogue.co.uk/article/when-couture-moved-in-on-streetwear" class="links">click here</a> to sign up to our mailing lists were we will be giving exlcusives updates and information about upcoming collaborations, drops and events </p>
      </body>
      <footer></footer>
 </html>
