--- a/Information pages/Street-art.html
+++ b/Information pages/Street-art.html
@@ -12,13 +12,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
      </head>
      <body style="background-color:rgb(177, 156, 217);" class="text">
-        <h1 class="Font"><strong>Street art</strong></h1>
+        <h1 class="Font"><strong>Street art</strong></h1><br><br>
 
-        <p class="WorkSans">The early 80s saw other subsections of street culture such as street art also influencing fashion at that time. Artists such as Keith Harring; are recognised for being one of the first street artists to bring their art styles to museums and galleries. Artists like Keith Harring are regarded as street art pioneers. Having collaborated with the likes of Vivienne Westwood, challenging the norms of high-end fashion at that time and paving the way for the ‘luxury streetwear’ aesthetic, we have today. Street art remains prevalent in the fashion world today, with brands like Gucci collaborating with Trevor Andrews aka Gucci Ghost after he realsed unauthorised street art using the logo.
+          <p class="WorkSans">The early 80s saw other subsections of street culture such as street art also influencing fashion at that time. Artists such as Keith Harring; are recognised for being one of the first street artists to bring their art styles to museums and galleries. Artists like Keith Harring are regarded as street art pioneers. Having collaborated with the likes of Vivienne Westwood, challenging the norms of high-end fashion at that time and paving the way for the ‘luxury streetwear’ aesthetic, we have today. Street art remains prevalent in the fashion world today, with brands like Gucci collaborating with Trevor Andrews aka Gucci Ghost after he realsed unauthorised street art using the logo.</p>
 
-        <img src= "../Media/Gucci-Ghost-ring.png" type="png" alt="Gucci-Ghost-ring" width="200px"><br><br>
+             <br><br><img src= "../Media/Gucci-Ghost-ring.png" type="png" alt="Gucci-Ghost-ring" width="200px"><br><br>
         
-        <a href= https://www.gucci.com/us/en/st/stories/inspirations-and-codes/article/agenda_2016_issue05_guccighost_collection_trouble_andrew_qa target="_blank" class="links">Click here</a> to learn more about the Gucci Ghost x Gucci collobaration. <br><br> 
+          <p><a href= https://www.gucci.com/us/en/st/stories/inspirations-and-codes/article/agenda_2016_issue05_guccighost_collection_trouble_andrew_qa target="_blank" class="links">Click here</a> to learn more about the Gucci Ghost x Gucci collobaration. <br><br> 
         
         To see Keith Harrings' art work <a href="https://www.haring.com/!/introduction"target="_blank"class="links">click here.</a> To see Trevor Andrews art work<a href="https://niftygateway.com/collections/trevorandrew"target="_blank"class="links">click here</a></p>
      </body>
