I have corrected typos on the Japanese streetwear page, fixed styling issues on skating and street page

--- a/Information pages/Skating.html
+++ b/Information pages/Skating.html
@@ -18,7 +18,7 @@
 
              <br><br><img src="../Media/Supreme-x-Stone-Island.png" type="png" alt="Supreme x Stone Island jacket" width="250px"><br><br>
         
-         <p><a href= "https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank"class="links">Click here</a> to learn more about the Supreme x Stone Island colab.</a> <br><br> To visit the supreme store <a href="https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank" class="links">click here</a></p>
+         <p class="WorkSans"><a href= "https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank"class="links">Click here</a> to learn more about the Supreme x Stone Island colab.</a> <br><br> To visit the supreme store <a href="https://www.stoneisland.co.uk/pages/stone-island-supreme-aw_020-021-colab" target="_blank" class="links">click here</a></p>
      </body>
      <footer></footer>
 </html>
