I have fixed the error on the about us page

--- a/about us.html
+++ b/about us.html
@@ -25,7 +25,7 @@
       <!-- this adds the image to the body of the about us page-->
          <img src= "Media/Man .png" alt="Young Male" type="png" class="background">
 
-       <!-- this is content for the left half of the background which I will style using css-->
+       <!-- this is content for the right half of the background which I will style using css-->
          <section class="colour">
               <img src = "Media/Logo.png" alt="Logo" type= "png" width="200" class="logo"/>
               <br><br>
