updated text on streetwears evolution  so users on smaller screens know how to to use the page

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -42,7 +42,7 @@
                  <section class="WorkSans">
 
                     <!-- main body text-->
-                     <p class="text"> Street culture is a term used to refer to urban culture. Like all cultures, streetculutre has an asthetic of its own. Streetwear is casual wear that has become popularise by its exclusive nature. The flip cards below document the evolution of this asthetic and give insight into the different factions of street culture that have impacted the asthetic. </p>
+                     <p class="text"> Street culture is a term used to refer to urban culture. Like all cultures, streetculutre has an asthetic of its own. Streetwear is casual wear that has become popularise by its exclusive nature. The flip cards below document the evolution of this asthetic and give insight into the different factions of street culture that have impacted the asthetic. (If flip cards don't work on your device click the images)</p>
                  </section>
                    <!-- only applies to the right side of the flip cards-->
                     <section class="right">
