I have added a meta description and keywords to each page

--- a/Exclusives.html
+++ b/Exclusives.html
@@ -4,6 +4,8 @@
         <!-- metda data for the code--> 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Sign up to our mailing list so you dont miss out on excluives updates and information">
+         <meta name="keywords" content="creative, fashion, street culture, photography, street art, creatives club, creatives hub, streetwears evolution, streetwear, sign up, exclsuives, latest drops,">
 
         <!-- links my css and html pages--> 
         <link rel="stylesheet" href="Style/Exclusives.css" type="text/css" />
