--- a/come to the hub.html
+++ b/come to the hub.html
@@ -5,6 +5,8 @@
     <!-- metda data for the code--> 
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="description" content="If you want to meet up with other creatives, come down to the hub. Its a safe spaces for all creatives to explore and develop their craft.">
+     <meta name="keywords" content="creative, fashion, street culture, photography, street art, creatives club, creatives hub,location,london,england, safe space, creative space">
       
      <!-- links my css and html pages--> 
      <link rel="stylesheet" href="Style/come to the hub.css" type="text/css" />
