--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -5,6 +5,8 @@
          <!-- metda data for the code--> 
          <meta charset="UTF-8">
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <meta name="description" content="Streetwear has evolved since th 70s. This page will explore its evolution.">
+         <meta name="keywords" content="creative, fashion, street culture, photography, street art, creatives club, creatives hub, streetwears evolution, streetwear cross over, luxury streetwear, 90s asthetic">
 
          <!-- links my css and html pages--> 
          <link rel="stylesheet" href="Style/Streetwear's evolution.css" type="text/css" />
