--- a/about us.html
+++ b/about us.html
@@ -4,6 +4,8 @@
       <!-- metda data for the code--> 
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="We are a hub for all creatives looking to explore street culture.">
+         <meta name="keywords" content="creative, fashion, street culture, photography, street art, creatives club, creatives hub, streetwears evolution, creative space, about us">
 
       <!-- links my css and html pages--> 
       <link rel="stylesheet" href="Style/about us.css" type="text/css"/>
