I have added aria labels to the links on the information pages

--- a/Information pages/Hip-Hop.html
+++ b/Information pages/Hip-Hop.html
@@ -18,7 +18,7 @@
 
         <br><br><img src= "../Media/hip-hop.jpg" type="jpg" alt="Hip-Hop" width="400px">
         
-        <p class="WorkSans"><a href= "https://uk.tommy.com/tommy-jeans-x-space-jam-tie-dye-t-shirt-dm0dm12198w02"target="_blank" class="links">Click here</a> to check out similar relases from Tommy Hilfiger</p>
+        <p class="WorkSans"><a href= "https://uk.tommy.com/tommy-jeans-x-space-jam-tie-dye-t-shirt-dm0dm12198w02"target="_blank" class="links" aria-label="click to visit the Tommy Hilfiger website">Click here</a> to check out similar relases from Tommy Hilfiger</p>
      </body>
      <footer></footer>
 </html>
