--- a/Information pages/Street-art.html
+++ b/Information pages/Street-art.html
@@ -18,9 +18,9 @@
 
              <br><br><img src= "../Media/Gucci-Ghost-ring.png" type="png" alt="Gucci-Ghost-ring" width="200px"><br><br>
         
-          <p class="WorkSans"><a href= https://www.gucci.com/us/en/st/stories/inspirations-and-codes/article/agenda_2016_issue05_guccighost_collection_trouble_andrew_qa target="_blank" class="links">Click here</a> to learn more about the Gucci Ghost x Gucci collobaration. <br><br> 
+          <p class="WorkSans"><a href= https://www.gucci.com/us/en/st/stories/inspirations-and-codes/article/agenda_2016_issue05_guccighost_collection_trouble_andrew_qa target="_blank" class="links"aria-label="read more about the Gucci Ghost collection">Click here</a> to learn more about the Gucci Ghost x Gucci collobaration. <br><br> 
         
-          To see Keith Harrings' art work <a href="https://www.haring.com/!/introduction"target="_blank"class="links">click here.</a> To see Trevor Andrews art work<a href="https://niftygateway.com/collections/trevorandrew"target="_blank"class="links">click here</a></p>
+          To see Keith Harrings' art work <a href="https://www.haring.com/!/introduction"target="_blank"class="links"aria-label="click here to view Keith Harrings art work">click here.</a> To see Trevor Andrews art work<a href="https://niftygateway.com/collections/trevorandrew"target="_blank"class="links"aria-label="To see Trevor Andrews art work">click here</a></p>
      </body>
      <footer></footer>
 </html>
