--- a/Exclusives.html
+++ b/Exclusives.html
@@ -38,13 +38,13 @@
                     <label for=" name">Name:</label><br>
 
                       <!-- validates text in the form. It also sets place holder text-->
-                      <input required type="text" id="first" name="Name" placeholder=" This is how we will address you"></input><br><br>
+                      <input required  aria-required ="true" type="text" id="first" name="Name" placeholder=" This is how we will address you"></input><br><br>
 
                       <!-- Sets the label and text for the email part of the form-->
                         <label for="Email">Email:</label><br>
 
                         <!-- validaties emails . It also sets place holder text-->
-                          <input required type="email" id="email" name="Email" placeholder="eg. Jazzy@gmail.com"></input><br><br>
+                          <input required aria-required ="true" type="email" id="email" name="Email" placeholder="eg. Jazzy@gmail.com"></input><br><br>
 
                             <!-- sets Niche label and allows me to style it-->
                             <label for="Niche">What is your Niche:</label><br>
