I have added more description to the links on the Japanese and the Haute coture information pages

--- a/Information pages/Haute.Coture.html
+++ b/Information pages/Haute.Coture.html
@@ -18,7 +18,7 @@
 
              <img src="../Media/dior.jpg" type="jpg" alt="Dior store" width="400px">
 
-          <p class="WorkSans">If you would like to read more about the Haute Coture and streetwear cross over <a href="https://www.vogue.co.uk/article/when-couture-moved-in-on-streetwear" class="links"aria-label="cick here to sign up">click here</a> to sign up to our mailing lists were we will be giving exlcusives updates and information about upcoming collaborations, drops and events </p>
+          <p class="WorkSans">If you would like to read more about the Haute Coture and streetwear cross over <a href="https://www.vogue.co.uk/article/when-couture-moved-in-on-streetwear" class="links"aria-label="cick here to sign up">click hereto sign up </a> to our mailing lists were we will be giving exlcusives updates and information about upcoming collaborations, drops and events </p>
      </body>
      <footer></footer>
 </html>
