--- a/Information pages/Japanese Streetwear.html
+++ b/Information pages/Japanese Streetwear.html
@@ -20,7 +20,7 @@
 
              <img src="../Media/Qiu-Tu.png" type="png" alt="Qiu-Tu Be@rbrick" width="250px"><br><br>Yue Minjun 'Qiu Tu' 1000% Bearbrick (2008), the most expenesive Be@rbrick<br><br>
         
-         <p class="WorkSans">If you want to start your own Be@rbrick collection, <a href="https://blog.ha.com/heritage-guide-to-collecting-bebricks/" target="_blank" class="links" aria-label="Read more about be@rbrick colleting" >click here.</a> <br><br><a href= "https://www.selfridges.com/GB/en/cat/be-rbrick/" target="_blank" class="links" aria-label="Click here to check out the Be@rbrick collection at selfridges">Click here</a> to check out the Bearbrick collection at selfridges</a></p>
+         <p class="WorkSans">If you want to start your own Be@rbrick collection, <a href="https://blog.ha.com/heritage-guide-to-collecting-bebricks/" target="_blank" class="links" aria-label="Read more about be@rbrick colleting" >click here.</a> <br><br><a href= "https://www.selfridges.com/GB/en/cat/be-rbrick/" target="_blank" class="links" aria-label="Click here to check out the Be@rbrick collection at selfridges">Click here to check out the Bearbrick collection </a> at selfridges</a></p>
      </body>
      <footer></footer>
 </html>
